* chore(devcontainer.json): add name and postCreateCommand properties * feat(devcontainer.json): add extensions property for vscode customization

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,6 @@
 {
+  "name": "Green IT - Practical",
+  "postCreateCommand": "pip install -r requirements.txt",
   "customizations": {
     "vscode": {
       "extensions": ["ms-python.python", "ms-toolsai.jupyter"]
